Fix navigation visibility, update ghost theme
Fix navigation visibility issue (hidden and show), inline blog css.

--- a/src/app/styles/_partials/_menu.scss
+++ b/src/app/styles/_partials/_menu.scss
@@ -102,6 +102,7 @@
     right: 0;
     z-index: 1;
     transition: all .2s ease-in-out;
+    visibility: hidden;
 }
 
 .modal__content {
@@ -114,9 +115,9 @@
 .c-hamburger__input:checked ~ .modal {
     opacity: 1;
     background-color: rgba(0, 0, 0, 0.9);
+    visibility: visible;
 
     .item {
-
     	a {
     		transform: scale(1);
     	}
